main.css
*{
  color: #f4f4f4;
  font-family: 'Roboto', sans-serif;
  font-weight: 300;
  font-size: 1em;
  background-color: black;
}
a {
  color: #ff7f00;
  -webkit-transition: 0.5s;
  -o-transition: 0.5s;
  transition: 0.5s;
  text-decoration: none !important;
  cursor: pointer;
  border-bottom: 1px solid #ff7f00;
}
a:hover {
  text-decoration: none !important;
  color: #00bbff !important;
  border-bottom: 1px solid #00bbff;
}
a:visited {
  color: #2397c1;
  border-bottom: 1px solid #2397c1;
}
a:focus {
  outline: none;
}
.fadeIn {
  opacity: 0;
}
.centered{
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
}
body,html{
  margin: 0px;
  height: 100%;
}
.parallax {
  /* Create the parallax scrolling effect */
  background-attachment: fixed;
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
}
.underscore{
  color: #f7704a;
}
.tword{
  opacity: 0.01;
  font-size: 50px;
  position: relative;
  cursor: default;
  font-weight: 300;
  color: white;
}
.aPhoto{
  width:100%;
}
.splitHr{
  border: 0;
  height: 1px;
  width: 1px;
  background-image: linear-gradient(to right, rgba(0, 0, 0, 0.75), #FFFFFF, rgba(0, 0, 0, 0.75));
  position: relative;
  margin: 0 auto;
  margin-top: 50px;
  margin-bottom: 50px;
}
#bannerPhotoWrapper{
  position: relative;
  height: 100%;
  display: flex;
  flex-direction: row;
  flex-wrap: wrap-reverse;
}
#bannerPhoto{
  position: relative;
  filter: brightness(80%);
  /*background: linear-gradient(to right, rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4));*/
  width: 45%;
  background-image: url("photos/curtis-chong-homepage-background2.jpg");
  background-size: 45%;
  background-position: left;
}
#introSidebarCon{
  flex-grow: 1;
  display: flex;
  align-items: center; /*centers children vertically*/
  justify-content: center; /*centers children horizontally*/
}
#introSidebar{
  position: relative;
  flex-direction: column;
  display: flex;
}
#issueInfo{
  height: 400px;
  background-color: #2C3E50;
}
#header{
  display: flex;
  flex-direction: column;
}
#title{
  flex-grow: 1;
  position: relative;
  font-size: 27px;
  color: white;
}
#subHeaders{
  flex-grow: 1;
  position: relative;
  font-size: 23px;
  opacity: 0.01;
  cursor: default;
  font-weight: 300;
  color: white;
}
#educationHeader{
  flex-grow: 1;
  position: relative;
  font-size: 14px;
  opacity: 0.01;
  cursor: default;
  font-weight: 300;
  color: white;
}
#quickLinks{
  position: relative;
  z-index: 1;
  font-size: 19px;
  opacity: 0.01;
  cursor: default;
  font-weight: 300;
  color: white;
  flex-grow: 1;
  justify-content: center;
  align-items: center;
  text-decoration: none;
  width: 400px;
}
.quickLinksLink{
  width: 30px;
  margin: 10px;
  display: inline-block;
  position: relative;
  border-bottom: none;
}
.quickLinksLink:hover{
  border-bottom: none;
}
.svg_icon {
  fill: white;
}
#svg_email:hover{
  fill: #00998c;
}
#svg_github:hover{
  fill: #6e5494;
}
#svg_linkedin:hover{
  fill: #4875B4;
}
#svg_stackoverflow:hover{
  fill: #f48024;
}
#svg_kaggle{
}
#svg_kaggle:hover{
  fill: #20beff;
}
#quickResumeLink{
  position: relative;
  display: inline-block;
  text-decoration: none !important;
  border: 1px solid white;
  border-radius: 6px;
  color: white;
  font-weight: 500;
  padding-left: 5px;
  padding-right: 5px;
}
#quickResumeLink:hover{
  color: red !important;
  border-color: rgb(255,0,0);
}
#quickResumeLink{
  transition: 200ms;
  transition-timing-function: ease-in-out;
  -webkit-transition: 200ms;
  -webkit-transition-timing-function: ease-in-out;
}

#quickResumeLink:visited {
  color: white;
}
svg{
  transition: 200ms;
  transition-timing-function: ease-in-out;
  -webkit-transition: 200ms;
  -webkit-transition-timing-function: ease-in-out;
}

#graph{
  background-color: black;
  width: 100%;
  position: relative;
  top: -10px;
}
#intro{
  background-color: #070502;
  position: relative;
}
#introTitle{
  font-size: 47px;
  text-align: center;
  position: relative;
  margin-top: 140px;
  font-weight: 100;
}
#introduction{
  position: relative;
  text-align: center;
  left: 10%;
  width: 80%;
  font-size: 17px;
  margin-top: 10px;
  vertical-align: top;
}
#workExperiencePhotos{
  position: relative;
  padding: 0px;
  height: 550px;
}

#workBanner{
  display: flex;
  width: 100%;
}
#flippPhoto{
}
#maxQPhoto{
}
.workPhoto{
  position: relative;
  height: 550px;
  width: 20%;
  /*background: linear-gradient(rgba(0, 0, 0, 0.15), rgba(0, 0, 0, 0.15));*/
  border-right: 1px solid white;
  display: flex;
  cursor: pointer;
  flex-direction: column;
}

.workPhoto:hover >.workLogo{
  transform: translateY(-60%);
  transition: 0.1s;
}
.workPhoto:hover >.upArrow{
  transform: translateY(-10px);
  transition: 0.1s;
  opacity: 1;
}

.jobTagline{
  width: 100%;
  text-align: center;
  position: absolute;
  bottom: 20%;
  background-color: rgba(0, 0, 0, 0.5);
  font-size: 15px;
}

.upArrow{
  position: absolute;
  max-height: 40px;
  width: 100%;
  order: 2;
  bottom: 20px;
  opacity: 0.5;
}

.workLogo{
  height:100%;
  width:100%;
  margin: 0;
  position: absolute;
  top: 50%;
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  max-height: 100px;
  order: 1;
}
#flippLogo{
}
#maxqLogo{
}
#bigTerminalLogo{
  min-height: 220px;
}
#luminaLogo{
  padding: 30px;
}
#bigTerminaPhoto{

}

#projects{
  position: relative;
  top: -10px;
  background-color: #070502;
}
.prjimg{
  cursor: pointer;
  border-radius: 10px;
  z-index: 1;
}
.prjimg:hover{
  transform: translateY(-3px);
  transition: 0.1s;
}
#visualizations{
  background-color: #070502;
}
#personalFavourites{
  background-color: #070502;
}
#otherProjects{
  background-color: #070502;
}
#archives{
  background-color: #070502;
}
.vaultName{
  font-weight: 100;
  font-size: 20px;
}
.vaultTagline{
  font-weight: 100;
  font-size: 15px;
}
.vaultNotes{
  font-weight: 100;
  position:relative;
  font-size: 12px;
  margin-left: 20px;
  margin-bottom: 10px;
}
#viewProject{
  font-size: 20px;
  cursor: pointer;
  width: 30%;
  color: white;
}
#backToEvent{
  display: none;
  font-size: 20px;
  cursor: pointer;
  width: 30%;
  color: white;
}
#network{
  position: relative;
  z-index: 2;
  opacity: 0.01;
  margin: auto;
  display: block;
  width: 100%;
  height: 30%;
}
#experienceIntro{
  position: relative;
  padding: 0px;
  z-index: 5;
  background-color: #070502;
  width: 100%;
}
#workExperiencePCon{
  background-color: black;
  padding-bottom: 50px;
}
#workExperienceP{
  position: relative;
  text-align: center;
  margin-top: 40px;
  font-size: 16px;
}
#workExperience{
  font-size: 30px;
  position: absolute;
  z-index: 3;
  width: 100%;
  text-align: center;
  text-shadow: 0 0 15px rgba(0, 0, 0, 0.9);
}
#hackathons{
  background-color: #070502;
  position: relative;
  padding-right: 0px;
  padding-left: 0px;
  height: 450px;
}
#hackathonNum{
  font-weight: 100;
  margin-right: 15px;
}
#hackathonsWord{
  top: 120px;
  font-size: 3.5em;
  position: relative;
  text-align: center;
  width:100%;
  z-index: 2;
  text-align: center;
  font-weight: 100;
}
#hackathonDesc{
  position: relative;
  top: 30px;
  font-size: 16px;
  text-align: center;
  width: 100%;
}
/*#hackathonThreeReasons{
  position: relative;
  top: 30px;
  font-size: 20px;
  text-align: center;
  width: 100%;
}
#hackathonReasonsWhy{
  position: relative;
  max-width: 500px;
  margin: 0px auto;
  margin-top: 40px;
  font-size: 15px;
  font-weight: 100;
}*/
#winNum{
  font-weight: 100;
  margin-right: 15px;
}
#hackathonWins{
  font-size: 2.5em;
  position: relative;
  margin-top: 150px;
  text-align: center;
  width: 100%;
  z-index: 2;
  font-weight: 100;
}
#binarySnowflakeCanvas{
  position: absolute;
  z-index: 1;
  border-top: 1px solid white;
  border-bottom: 1px solid white;
  right: 0px;
  background-color: #070502;
  top: 0px;
}
#htn{
  position: relative;
  padding-right: 0px;
  padding-left: 0px;
}
#htn2016Img{
  height: 530px;
}
#hackathon-curtain{
  height: 100%;
  background-image: linear-gradient(to right, rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4));
}
#hackathonWords{
  position: absolute;
  font-size: 32px;
  opacity: 0.01;
  color: white;
  font-weight: 100;
  left: 40%;
}
#htnDesc{
  border-top: 1px solid white;
  background-color: #070502;
  position: relative;
  z-index: 5;
}
#winningHacks{
  background-color: #070502;
  position: relative;
  padding-bottom: 30px;
}
.hackathonHighlightsImg{
  border-radius: 10px;
}
.competitionWin{
  cursor: pointer;
  color: #ff7f00;
  -webkit-transition: 0.5s;
  -o-transition: 0.5s;
  transition: 0.5s;
}
.competitionWin:hover {
  text-decoration: none !important;
  transform: translateY(-3px);
  transition: 0.1s;
}
.HackathonName{
  position: relative;
  text-align: center;
  padding-bottom: 20px;
  padding-top: 20px;
  font-weight: 900;
}
#minotour{
  position: relative;
}




.modal-content{
  background-color: #2c3e50;
}
#footer{
  background-color: #070502;
  min-height: 300px;
  width:100%;
}
#typingCon{
  width: 100%;
  padding: 15px;
  background-color: #0c1110;
  border: 1px solid white;
  top: 30px;
}
.typed-cursor{
  color: #00FF00;
}
.typed-cursor{
  opacity: 1;
  -webkit-animation: blink 0.7s infinite;
  -moz-animation: blink 0.7s infinite;
  animation: blink 0.7s infinite;
}
@keyframes blink{
  0% { opacity:1; }
  50% { opacity:0; }
  100% { opacity:1; }
}
@-webkit-keyframes blink{
  0% { opacity:1; }
  50% { opacity:0; }
  100% { opacity:1; }
}
@-moz-keyframes blink{
  0% { opacity:1; }
  50% { opacity:0; }
  100% { opacity:1; }
}
/*
.projectTitle {
  position: absolute;
  cursor: pointer;
  padding-bottom: 1px;
  transition: all 0.8s ease-in-out;
  text-align: center;
}

.projectTitle:before {
  content: '';
  display: block;
  position: absolute;
  left: 0;
  bottom: 0;
  height: 1px;
  width: 0;
  transition: width 0s ease, background .5s ease;
}

.projectTitle:after {
  content: '';
  display: block;
  position: absolute;
  right: 0;
  bottom: 0;
  height: 1px;
  width: 0;
  background: white;
  transition: width .5s ease;
}

.projectTitle:hover:before {
  width: 100%;
  background: white;
  transition: width .5s ease;
}

.projectTitle:hover:after {
  width: 100%;
  background: transparent;
}*/

